Changed example systemd unitfile so that systemd will not assume that the service has failed when it forks

--- a/universal-bison.service
+++ b/universal-bison.service
@@ -5,6 +5,7 @@ After=syslog.target network.target
 [Service]
 User=universal
 Restart=always
+Type=forking
 ExecStart=/opt/universal/bin/universal-sub-xpubxsub tcp://pubsub.ndovloket.nl:7658 tcp://0.0.0.0:7658
 
 [Install]
